<resources>
    <string name="app_name">todoListProject</string>
    <string name="log_in">Log In</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">email</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="confirm_password">confirm password</string>
    <string name="already_have_account">Already have Account?</string>
    <string name="don_t_have_account">Don\'t have Account?</string>
    <string name="full_name">Full Name</string>
    <string name="username">username</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="log_out">Log Out</string>
    <string name="account">Account</string>
    <string name="bruh">Bruh</string>
    <string name="bruh_gmail_com">Bruh@gmail.com</string>
    <string name="title">Judul</string>
    <string name="description">Deskripsi</string>
    <string name="submit">Submit</string>
    <string name="date">Date\n</string>
    <string name="save">Save</string>
    <string name="checkbox">Checkbox</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="new_task">New Task</string>
    <string name="loading">Loading...</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="add">add task</string>
    <string name="profile">Profile</string>

</resources>